single product page ready

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mrabarham</title>
+    <title>OwnOnlineShop</title>
+    <link rel="shortcut icon" href="../Images/Assets/favicon.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
@@ -135,7 +136,7 @@
                 <figure><img src="../Images/Posters/oneplus.jpg" alt="hot deal image"></figure>
             </div>
             <div class="hotdeal-detail">
-                <p>Oneplus 8 Pro</p>
+                <p>Oneplus 9R</p>
                 <p>Rs 35940</p>
             </div>
             <div class="purchase-section">
@@ -199,7 +200,7 @@
                     <figure><img src="../Images/Posters/oneplus.jpg" alt="hot deal image"></figure>
                 </div>
                 <div class="hotdeal-detail">
-                    <p>Oneplus 8 Pro</p>
+                    <p>Oneplus 9R</p>
                     <p>Rs 35940</p>
                 </div>
                 <div class="purchase-section">
@@ -264,7 +265,7 @@
                     <figure><img src="../Images/Posters/oneplus.jpg" alt="hot deal image"></figure>
                 </div>
                 <div class="hotdeal-detail">
-                    <p>Oneplus 8 Pro</p>
+                    <p>Oneplus 9R</p>
                     <p>Rs 35940</p>
                 </div>
                 <div class="purchase-section">
