single product page modified

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -126,8 +126,8 @@
 <!-- hot deals slider starats -->
 <div class="hotdeals-container">
 <div class="hotdeal-header">
-    <h2>Our Hot Deals <i class="fa-solid fa-arrow-right-long"></i> </h2>
-    <p>Chckout Our Latest Hot Deals</p>
+    <h2>Most Viewed <i class="fa-solid fa-arrow-right-long"></i> </h2>
+    <p>Chckout Our Most Viewed Products</p>
 </div >
 <div class="swiper hotdeals-swiper">
     <div class="swiper-wrapper">
@@ -190,8 +190,8 @@
 <!-- Best deals slider starats -->
 <div class="hotdeals-container">
     <div class="hotdeal-header">
-        <h2>Our Best Deals <i class="fa-solid fa-arrow-right-long"></i> </h2>
-        <p>Chckout Our Latest Hot Deals</p>
+        <h2>Latest Deals <i class="fa-solid fa-arrow-right-long"></i> </h2>
+        <p>Chckout Our Latest Deals</p>
     </div >
     <div class="swiper hotdeals-swiper">
         <div class="swiper-wrapper">
