--- a/Pages/product.html
+++ b/Pages/product.html
@@ -61,7 +61,14 @@
             <div class="swiper-slide">
               <figure>
                 <img
-                  src="../Images/Products/Oneplus5.png"
+                  src="../Images/Products/Oneplus 6/1.png"  alt=" ownOnlineshopProduct image"
+                />
+              </figure>
+            </div>
+            <div class="swiper-slide">
+              <figure>
+                <img
+                  src="../images/Products/Oneplus 6/7.png"
                   alt=" ownOnlineshopProduct image"
                 />
               </figure>
@@ -69,7 +76,7 @@
             <div class="swiper-slide">
               <figure>
                 <img
-                  src="../images/Products/Oneplus9R-1.webp"
+                  src="../images/Products/Oneplus 6/5.png"
                   alt=" ownOnlineshopProduct image"
                 />
               </figure>
@@ -77,7 +84,7 @@
             <div class="swiper-slide">
               <figure>
                 <img
-                  src="../images/Products/Oneplus9R-2.jpg"
+                  src="../images/Products/Oneplus 6/3.png"
                   alt=" ownOnlineshopProduct image"
                 />
               </figure>
@@ -85,15 +92,7 @@
             <div class="swiper-slide">
               <figure>
                 <img
-                  src="../images/Products/Oneplus9R-3.png"
-                  alt=" ownOnlineshopProduct image"
-                />
-              </figure>
-            </div>
-            <div class="swiper-slide">
-              <figure>
-                <img
-                  src="../images/Products/Oneplus9R-4.png"
+                  src="../images/Products/Oneplus 6/4.png"
                   alt=" ownOnlineshopProduct image"
                 />
               </figure>
@@ -105,21 +104,21 @@
         </div>
       </div>
       <div class="product-description">
-        <h1 class="product-heading">Oneplus Nord 9R</h1>
+        <h1 class="product-heading">Oneplus 9R Pro</h1>
         <p class="product__detail">
-          Oneplus Nord 9R | 16GB Ram - 512GB ROM | 18.5 Snapdragon Processor |
+          Oneplus 6 | 16GB Ram - 512GB ROM | 18.5 Snapdragon Processor |
           5G
         </p>
 
         <h2 class="product__price">
-          <i class="fa-solid fa-indian-rupee-sign"></i> 35940
+   <span style="color: royalblue;font-size:1em; margin-right: 10px;" id="actprice"><del>39999</del></span>          <i class="fa-solid fa-indian-rupee-sign"></i> 35940  <span id="off" style="color:crimson; letter-spacing:0px; word-spacing:0px; font-size:1em; margin-left: 10px;">10% Off</span>
         </h2>
         <!-- varients container starts -->
         <div class="product__varient">
           <h3>Choose Your Varient -</h3>
           <div class="__varients">
-            <button class="active-varient">8 - 128</button>
-            <button>16 - 512</button>
+            <button class="active-varient">8 GB - 128 GB</button>
+            <button>16 GB - 512 GB</button>
           </div>
         </div>
         <!-- varients container ends -->
@@ -136,80 +135,179 @@
           <button class="addtocartbtn purchase__optionsBtn">Add To Cart</button>
           <button class="buynowbtn purchase__optionsBtn">Buy Now</button>
         </div>
+        <div class="other-details">
+          <h2>Other Details - </h2>
+          <!-- <ul></ul> -->
+          <section>
+            <h3>Display</h3>
+            <p>Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur </p>
+          </section>
+          <section>
+            <h3>Performacne</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </section>
+          <section>
+            <h3>Processor</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </section>
+          <section>
+            <h3>Network</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </section>
+          <section>
+            <h3>Touch</h3>
+            <p>Lorem ipsum dolor sit amet.</p>
+          </section>
+        </div>
       </div>
     </div>
 
-    <!-- Similar Products slider starats -->
 
-    <div class="similar-products-container">
-        <h1>Similar Products</h1>
-        <div class="swiper mySwiper similarProductsSlider">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="similarproduct-img">
-                    <figure><img src="../Images/Products/pexels-kinkate-205926.jpg" alt="hot deal image"></figure>
-                </div>
-                <div class="similar-detail">
-                    <p>Sony K-840</p>
-                    <p>Rs 999</p>
-                </div>
-                <div class="purchase-section">
-                    <button class="purchase addtoCart">Add To Cart</button>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="similar-img">
-                    <figure><img src="../Images/Products/pexels-kinkate-205926.jpg" alt="hot deal image"></figure>
-                </div>
-                <div class="similar-detail">
-                    <p>Sony K-840</p>
-                    <p>Rs 999</p>
-                </div>
-                <div class="purchase-section">
-                    <button class="purchase addtoCart">Add To Cart</button>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="similar-img">
-                    <figure><img src="../Images/Products/pexels-kinkate-205926.jpg" alt="hot deal image"></figure>
-                </div>
-                <div class="similar-detail">
-                    <p>Sony K-840</p>
-                    <p>Rs 999</p>
-                </div>
-                <div class="purchase-section">
-                    <button class="purchase addtoCart">Add To Cart</button>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="similar-img">
-                    <figure><img src="../Images/Products/pexels-kinkate-205926.jpg" alt="hot deal image"></figure>
-                </div>
-                <div class="similar-detail">
-                    <p>Sony K-840</p>
-                    <p>Rs 999</p>
-                </div>
-                <div class="purchase-section">
-                    <button class="purchase addtoCart">Add To Cart</button>
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="similar-img">
-                    <figure><img src="../Images/Products/pexels-kinkate-205926.jpg" alt="hot deal image"></figure>
-                </div>
-                <div class="similar-detail">
-                    <p>Sony K-840</p>
-                    <p>Rs 999</p>
-                </div>
-                <div class="purchase-section">
-                    <button class="purchase addtoCart">Add To Cart</button>
-                </div>
+    <div class="similar-product-slider">
+      <h1>Similar Products - </h1>
+      <div class="swiper mySwiper similar">
+        <div class="swiper-wrapper">
+                  <!-- slide starts -->
+                  <div class="swiper-slide">
+                    <div class="similar-product__img">
+                      <img src="" alt="Similar Product Image OwnOnlineshop">
+                    </div>
+                    <div class="similar-product__description">
+                      <h2>Samsung S22 Ultra</h2>
+                      <p> Rs 989950 </p>
+                      <div class="purchase-options">
+                        <button>Add To Cart</button>
+                        <button>Buyt Now</button>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
+          <!-- slide ends -->
+                    <!-- slide starts -->
+                    <div class="swiper-slide">
+                      <div class="similar-product__img">
+                        <img src="" alt="Similar Product Image OwnOnlineshop">
+                      </div>
+                      <div class="similar-product__description">
+                        <h2>Samsung S22 Ultra</h2>
+                        <p> Rs 989950 </p>
+                        <div class="purchase-options">
+                          <button>Add To Cart</button>
+                          <button>Buyt Now</button>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung S22 Ultra</h2>
+              <p> Rs 989950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+        </div>
+        <!-- <div class="swiper-button-next"></div> -->
+        <!-- <div class="swiper-button-prev"></div> -->
+        <!-- <div class="swiper-pagination"></div> -->
+      </div>
     </div>
-    <!-- Similar Products slider ends -->
 
     <!-- Footer  Starts-->
     <footer>
@@ -281,36 +379,25 @@
     </footer>
     <!-- Footer ends -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script>
-      var swiper = new Swiper(".mySwiper", {
+        var swiper = new Swiper(".mySwiper", {
         slidesPerView: 1,
         spaceBetween: 30,
-        loop: true,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
         },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
       });
-
-      var swiper2 = new Swiper(".similarProductsSlider", {
+      var swiper2 = new Swiper(".similar", {
         slidesPerView: 4,
-        spaceBetween: 10,
-        loop: true,
+        spaceBetween: 30,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
         },
-        navigation: {
-          nextEl: ".swiper-button-next",
-          prevEl: ".swiper-button-prev",
-        },
       });
-
 
     </script>
   </body>
