modifiled header cateogaries and product page with homepage purchase buttons

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -41,20 +41,20 @@
              <p>Photography</p>
          </div>
          <div class="cateogary-box">
-            <img src="../Images/Products/pexels-anna-nekrashevich-7214628.jpg" alt="cateogary image">
+            <img src="../Images/Products/Samsung A73/001_Galaxy_A73_5G_gray_front.jpg" alt="cateogary image">
             <p>Gadgets</p>
         </div>
         <div class="cateogary-box">
-            <img src="../Images/Products/pexels-jess-bailey-designs-788946.jpg" alt="cateogary image">
-            <p>Electronics</p>
+            <img src="../Images/Products/smartwatch.jpg" alt="cateogary image">
+            <p>Smart Watch</p>
         </div>
         <div class="cateogary-box">
-            <img src="../Images/Products/pexels-jess-bailey-designs-983831.jpg" alt="cateogary image">
-            <p>Accesories</p>
+            <img src="../Images/Products/Samsung Buds/005_galaxybudslive_mysticbronze_dynamic_combination-1.jpg" alt="cateogary image">
+            <p>Earbuds</p>
         </div>
                  <div class="cateogary-box">
              <img src="../Images/Products/pexels-kinkate-205926.jpg" alt="cateogary image">
-             <p>Sounds</p>
+             <p>Headphone</p>
          </div>
 
          <div class="cateogary-box">
@@ -62,8 +62,8 @@
             <p>Electronics</p>
         </div>
         <div class="cateogary-box">
-            <img src="../Images/Products/pexels-anna-nekrashevich-7214628.jpg" alt="cateogary image">
-            <p>Accesories</p>
+            <img src="../Images/Products/laptop.jpg" alt="cateogary image">
+            <p>Laptop</p>
         </div>
      </div>
  </div>
@@ -141,6 +141,7 @@
             </div>
             <div class="purchase-section">
                 <button class="purchase addtoCart">Add To Cart</button>
+                <button class="buynowbtn">Buy Now</button>
             </div>
         </div>
         <div class="swiper-slide hotdeal">
@@ -153,6 +154,7 @@
             </div>
             <div class="purchase-section">
                 <button class="purchase addtoCart">Add To Cart</button>
+                <button class="buynowbtn">Buy Now</button>
             </div>
         </div>
         <div class="swiper-slide hotdeal">
@@ -166,6 +168,7 @@
             </div>
             <div class="purchase-section">
                 <button class="purchase addtoCart">Add To Cart</button>
+                <button class="buynowbtn">Buy Now</button>
             </div>
         </div>
         <div class="swiper-slide hotdeal">
@@ -179,6 +182,7 @@
             </div>
             <div class="purchase-section">
                 <button class="purchase addtoCart">Add To Cart</button>
+                <button class="buynowbtn">Buy Now</button>
             </div>
         </div>
     </div>
@@ -205,6 +209,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -217,6 +222,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -230,6 +236,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -243,6 +250,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
         </div>
@@ -270,6 +278,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -282,6 +291,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -295,6 +305,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
             <div class="swiper-slide hotdeal">
@@ -308,6 +319,7 @@
                 </div>
                 <div class="purchase-section">
                     <button class="purchase addtoCart">Add To Cart</button>
+                    <button class="buynowbtn">Buy Now</button>
                 </div>
             </div>
         </div>
