--- a/Pages/product.html
+++ b/Pages/product.html
@@ -104,9 +104,9 @@
         </div>
       </div>
       <div class="product-description">
-        <h1 class="product-heading">Oneplus 9R Pro</h1>
+        <h1 class="product-heading">Oneplus 6</h1>
         <p class="product__detail">
-          Oneplus 6 | 16GB Ram - 512GB ROM | 18.5 Snapdragon Processor |
+          Oneplus 6 Black | 16GB Ram - 512GB ROM | 18.5 Snapdragon Processor |
           5G
         </p>
 
@@ -165,16 +165,17 @@
 
     <div class="similar-product-slider">
       <h1>Similar Products - </h1>
+      <p>Also Have a look at similar Products</p>
       <div class="swiper mySwiper similar">
         <div class="swiper-wrapper">
                   <!-- slide starts -->
                   <div class="swiper-slide">
                     <div class="similar-product__img">
-                      <img src="" alt="Similar Product Image OwnOnlineshop">
+                      <img src="../Images/Products/Oneplus 6/1.png" alt="Similar Product Image OwnOnlineshop">
                     </div>
                     <div class="similar-product__description">
-                      <h2>Samsung S22 Ultra</h2>
-                      <p> Rs 989950 </p>
+                      <h2>Oneplus 6</h2>
+                      <p> Rs 29950 </p>
                       <div class="purchase-options">
                         <button>Add To Cart</button>
                         <button>Buyt Now</button>
@@ -185,11 +186,11 @@
           <!-- slide starts -->
           <div class="swiper-slide">
             <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
+              <img src="../Images/Products/Oneplus 6T/1.png" alt="Similar Product Image OwnOnlineshop">
             </div>
             <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
-              <p> Rs 989950 </p>
+              <h2>Oneplus 6T</h2>
+              <p> Rs 389950 </p>
               <div class="purchase-options">
                 <button>Add To Cart</button>
                 <button>Buyt Now</button>
@@ -200,11 +201,11 @@
                     <!-- slide starts -->
                     <div class="swiper-slide">
                       <div class="similar-product__img">
-                        <img src="" alt="Similar Product Image OwnOnlineshop">
+                        <img src="../Images/Products/Oneplus5.png" alt="Similar Product Image OwnOnlineshop">
                       </div>
                       <div class="similar-product__description">
-                        <h2>Samsung S22 Ultra</h2>
-                        <p> Rs 989950 </p>
+                        <h2>Oneplus 9 PRo</h2>
+                        <p> Rs 489950 </p>
                         <div class="purchase-options">
                           <button>Add To Cart</button>
                           <button>Buyt Now</button>
@@ -215,7 +216,7 @@
           <!-- slide starts -->
           <div class="swiper-slide">
             <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
+              <img src="../Images/Products/Samsung S22/001_galaxys22ultra_front_burgundy.jpg" alt="Similar Product Image OwnOnlineshop">
             </div>
             <div class="similar-product__description">
               <h2>Samsung S22 Ultra</h2>
@@ -230,10 +231,10 @@
           <!-- slide starts -->
           <div class="swiper-slide">
             <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
+              <img src="../Images/Products/Samsung S10/Samsung-Galaxy-S10-5G-_-Crown-Silver1-2.jpg" alt="Similar Product Image OwnOnlineshop">
             </div>
             <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
+              <h2>Samsung Galaxy S10+</h2>
               <p> Rs 989950 </p>
               <div class="purchase-options">
                 <button>Add To Cart</button>
@@ -245,10 +246,40 @@
           <!-- slide starts -->
           <div class="swiper-slide">
             <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
+              <img src="../Images/Products/Samsung Buds/001_galaxybudslive_mysticbronze_front-1.jpg" alt="Similar Product Image OwnOnlineshop">
             </div>
             <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
+              <h2>Samsung Buds</h2>
+              <p> Rs 89950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="../Images/Products/Samsung A73/001_Galaxy_A73_5G_gray_front.jpg" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung Galaxy A73</h2>
+              <p> Rs 289950 </p>
+              <div class="purchase-options">
+                <button>Add To Cart</button>
+                <button>Buyt Now</button>
+              </div>
+            </div>
+          </div>
+          <!-- slide ends -->
+          <!-- slide starts -->
+          <div class="swiper-slide">
+            <div class="similar-product__img">
+              <img src="../Images/Products/Samsung A53/010_Galaxy_A53_5G_blue_back.jpg" alt="Similar Product Image OwnOnlineshop">
+            </div>
+            <div class="similar-product__description">
+              <h2>Samsung Galaxy A53</h2>
               <p> Rs 989950 </p>
               <div class="purchase-options">
                 <button>Add To Cart</button>
@@ -260,40 +291,10 @@
           <!-- slide starts -->
           <div class="swiper-slide">
             <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
+              <img src="../Images/Products/Samsung A53/021_Galaxy_A53_5G_peach_back_l30.jpg" alt="Similar Product Image OwnOnlineshop">
             </div>
             <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
-              <p> Rs 989950 </p>
-              <div class="purchase-options">
-                <button>Add To Cart</button>
-                <button>Buyt Now</button>
-              </div>
-            </div>
-          </div>
-          <!-- slide ends -->
-          <!-- slide starts -->
-          <div class="swiper-slide">
-            <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
-            </div>
-            <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
-              <p> Rs 989950 </p>
-              <div class="purchase-options">
-                <button>Add To Cart</button>
-                <button>Buyt Now</button>
-              </div>
-            </div>
-          </div>
-          <!-- slide ends -->
-          <!-- slide starts -->
-          <div class="swiper-slide">
-            <div class="similar-product__img">
-              <img src="" alt="Similar Product Image OwnOnlineshop">
-            </div>
-            <div class="similar-product__description">
-              <h2>Samsung S22 Ultra</h2>
+              <h2>Samsung Galaxy A53 Peach</h2>
               <p> Rs 989950 </p>
               <div class="purchase-options">
                 <button>Add To Cart</button>
@@ -305,7 +306,7 @@
         </div>
         <!-- <div class="swiper-button-next"></div> -->
         <!-- <div class="swiper-button-prev"></div> -->
-        <!-- <div class="swiper-pagination"></div> -->
+        <div class="swiper-pagination"></div>
       </div>
     </div>
 
@@ -391,7 +392,7 @@
         },
       });
       var swiper2 = new Swiper(".similar", {
-        slidesPerView: 4,
+        slidesPerView: 5,
         spaceBetween: 30,
         pagination: {
           el: ".swiper-pagination",
