--- a/Pages/product.html
+++ b/Pages/product.html
@@ -161,8 +161,37 @@
         </div>
       </div>
     </div>
-
-
+    <!-- testimonial starts here -->
+<div class="testimonial">
+<header>
+  <h1>Read, What are Customer Says.</h1>
+  <p>We believe that people can be truly happy on the outside only after reaching happiness within.</p>
+</header>
+  <div class="testimonial-container">
+    <div class="testimonial__box">
+      <img src="../Images/Assets/customer.jpg" alt="customer image">
+      <p>Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. A lacus vestibulum sed arcu non. Dolor magna eget est lorem ipsum dolor sit amet </p>
+      <h5>Jon Doe</h5>
+    </div>
+    <div class="testimonial__box">
+      <img src="../Images/Assets/customer2.jpg" alt="customer image">
+      <p>Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. A lacus vestibulum sed arcu non. Dolor magna eget est lorem ipsum dolor sit amet </p>
+      <h5>Julia</h5>
+    </div>
+    <div class="testimonial__box">
+      <img src="../Images/Assets/customer4.jpg" alt="customer image">
+      <p>Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. A lacus vestibulum sed arcu non. Dolor magna eget est lorem ipsum dolor sit amet </p>
+      <h5>Donny Jr</h5>
+    </div>
+    <div class="testimonial__box">
+      <img src="../Images/Assets/customer3.jpg" alt="customer image">
+      <p>Amet luctus venenatis lectus magna fringilla urna porttitor rhoncus dolor. A lacus vestibulum sed arcu non. Dolor magna eget est lorem ipsum dolor sit amet </p>
+      <h5>Mia Khalifa</h5>
+    </div>
+  </div>
+</div>
+    <!-- testimonial ends here -->
+<!-- similar products slidert starts -->
     <div class="similar-product-slider">
       <h1>Similar Products - </h1>
       <p>Also Have a look at similar Products</p>
