other details nodified

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -137,27 +137,7 @@
         </div>
         <div class="other-details">
           <h2>Other Details - </h2>
-          <!-- <ul></ul> -->
-          <section>
-            <h3>Display</h3>
-            <p>Lorem ipsum dolor sit amet. Lorem ipsum, dolor sit amet consectetur </p>
-          </section>
-          <section>
-            <h3>Performacne</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </section>
-          <section>
-            <h3>Processor</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </section>
-          <section>
-            <h3>Network</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </section>
-          <section>
-            <h3>Touch</h3>
-            <p>Lorem ipsum dolor sit amet.</p>
-          </section>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At numquam possimus, minima sunt accusamus voluptatem.</p>
         </div>
       </div>
     </div>
