added the feedback container

--- a/Pages/product.html
+++ b/Pages/product.html
@@ -380,6 +380,21 @@
       </div>
   </div>
 <!-- faq ENDS here -->
+
+<div class="feedback-container">
+  <h1 align="center">Share Your Feedback</h1>
+  <div class="feedback_section">
+    <form action="">
+      <div class="feedback__input">
+    <input type="text" placeholder="Your Feedback.">
+      </div>
+  <div class="feedback__submit">
+<button type="submit">Share Your Reply</button>
+      </div>
+    </form>
+  </div>
+</div>
+
     <!-- Footer  Starts-->
     <footer>
       <div class="footer-hero">
